// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={false}
        id="test"
        multiple={true}
        onChange={null}
        required={false}
        value={Array []}
      >
        <option
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
        <option
          key="ch2"
          value="ch2"
        >
          choice 2
        </option>
      </select>
    </div>
  </label>
</div>
`;

exports[`rendering renders correctly only one option 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={false}
        id="test"
        multiple={true}
        onChange={null}
        required={false}
        value={Array []}
      >
        <option
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
      </select>
    </div>
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isRootFullWidth
        rootLayoutHorizontal
        isRootRequired
        rootSizeLarge
        isRootStateInvalid
        rootVariantFilled"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label
                isLabelHidden"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={true}
        id="test"
        multiple={true}
        onChange={null}
        required={true}
        value="ch1"
      >
        <option
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
        <option
          key="ch2"
          value="ch2"
        >
          choice 2
        </option>
      </select>
      <div
        className="bottomLine"
      />
    </div>
  </label>
  <div
    className="helperText"
  >
    some help
  </div>
</div>
`;

exports[`rendering renders correctly with one selected option 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={false}
        id="test"
        multiple={true}
        onChange={null}
        required={false}
        value={
          Array [
            "ch1",
          ]
        }
      >
        <option
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
        <option
          key="ch2"
          value="ch2"
        >
          choice 2
        </option>
      </select>
    </div>
  </label>
</div>
`;

exports[`rendering renders correctly with two selected options 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={false}
        id="test"
        multiple={true}
        onChange={null}
        required={false}
        value={
          Array [
            "ch1",
            "ch2",
          ]
        }
      >
        <option
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
        <option
          key="ch2"
          value="ch2"
        >
          choice 2
        </option>
      </select>
    </div>
  </label>
</div>
`;
